Fix clipping paths Add plot points to graphs + change hover colour Add date to hover data

--- a/client/app/components/graph/graph.styl
+++ b/client/app/components/graph/graph.styl
@@ -1,13 +1,12 @@
 graph
 
-  .hover-value
-    font-size: 16px;
+  .hover-data
+    font-size: 14px;
     margin: 10px 0 0;
-    font-weight: bold;
 
-    .units
-      font-size: 14px;
-      font-weight: normal;
+    .hover-value
+      font-size: 16px;
+      font-weight: bold;
 
   .graph-label
     h2
