--- a/client/app/components/tabular/tabular.styl
+++ b/client/app/components/tabular/tabular.styl
@@ -6,14 +6,13 @@ tabular
   .no-wrap
     white-space: nowrap;
 
-  .hover-value
-    font-size: 12px;
+  .hover-data
+    font-size: 10px;
     margin-left: 17px;
-    font-weight: bold;
 
-    .units
-      font-size: 11px;
-      font-weight: normal;
+    .hover-value
+      font-size: 12px;
+      font-weight: bold;
 
   .tabular
 
